Fix countdown alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,22 +184,22 @@ div.box-head {
 }
 
 .digits {
-	width: 372px;
 	margin: -10px auto 0 auto;
+	display: inline-block;
 }
 
 .countdown h2 {
 	font-weight: 100;
-	text-align: center;
 	margin-bottom: 20px;
 }
 
 .countdown {
-	margin-bottom: 30px;
+	margin-bottom: -50px;
+	text-align: center;
 }
 
-@media (min-width: 403px) and (max-width: 991px) {
+@media (max-width: 991px) {
 	.countdown {
-		margin-bottom: 75px;
+		margin-bottom: 0 !important;
 	}
 }
